# huskyTech2

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_windows.sh
base/entities/: aaaaa.edef  banana.edef  ht2.edef  sex.edef  skintest.edef  terrain.edef
base/maps/lava/: worlddef
base/maps/test/: worlddef
base/maps/test2/: worlddef
base/maps/test3/: worlddef
base/maps/test5/: worlddef
base/models/: Plane.glb  banana.glb  boxviz.glb  ceiling.glb  cube.dae  ht2.dae  ht2.glb  lava_floor.glb  level.glb  plane.dae  player.glb  player.gltf  puro.glb  skintest.glb  snowball.glb
base/shaders/: basic.frag  example.frag  example.vert  gbuffer.frag  gbuffer.vert  gbuffer_anim.frag  gbuffer_anim.vert  lighting.frag  postbuffer.frag  postbuffer.vert  rainbow.frag  rainbow.vert  shadow.frag  shadow.geom.old  shadow.vert  shadow_mask.frag  shadow_mask.vert  terrain.frag  terrain.vert  unlit.frag  unlit.vert
base/terrains/: ll_main.glb
base/ui/: test.cock
base/work/: level.blend  level.blend1  skintest.blend  skintest.blend1  test.map
base/work/maps/: lava  sponza  test.map  test2
base/work/playermodel/: playermodel v1 (mirror applyed).blend  playermodel v2 new.blend  playermodel v2 new.blend1  test.fbx
glad-gl/src/: gl.rs
src/: animation.rs  animgraph.rs  audio.rs  camera.rs  cock_handler.rs  helpers.rs  keyboard.rs  light.rs  main.rs  meshes.rs  mouse.rs  physics.rs  renderer.rs  shaders.rs  skeletal_animation.rs  textures.rs  ui.rs  uimesh.rs
src/common_anim/: mod.rs  move_anim.rs
src/huskyTech2/: huskyTech2.sln
src/huskyTech2/huskyTech2/: globals.h  huskyTech2.vcxproj  huskyTech2.vcxproj.filters  main.cpp
src/maps/: mod.rs  triggers.rs
src/maps/test/: mod.rs
src/motifui/: basics.rs  mod.rs  texture.frag  texture.vert  textures.rs
src/optimisations/: DoubleIndexVec.rs  keyboardmap.rs  mod.rs
src/server/: connections.rs  lan.rs  mod.rs  server_player.rs
src/sunlust_intro/: mod.rs
src/ui_defs/: chat.rs
src/worldmachine/: components.rs  ecs.rs  entities.rs  helpers.rs  mod.rs  player.rs  snowballs.rs
